add plan detail

--- a/src/app/parts/google-spot-dialog/google-spot-dialog.component.scss
+++ b/src/app/parts/google-spot-dialog/google-spot-dialog.component.scss
@@ -13,7 +13,7 @@
       margin-top: 3px;
     }
   }
-  .mat-dialog-content{
+  mat-dialog-content{
     .form{
       .mat-form-field{
         .mat-form-field-wrapper{
