--- a/src/app/parts/map-dialog/map-dialog.component.scss
+++ b/src/app/parts/map-dialog/map-dialog.component.scss
@@ -1,6 +1,12 @@
 ::ng-deep mat-dialog-container#fullmap{
   padding: 0;
   position: relative;
+
+  mat-dialog-content{
+    margin: 0;
+    padding: 0;
+    max-height: max-content;
+  }
   // touch-action: manipulation;
   button.close {
     position: absolute;
@@ -16,10 +22,10 @@
     }
   }
 
-  .mat-dialog-content{
-    margin: 0;
-    padding: 0;
-    max-height: max-content;
-    // max-height: 94vh;
-  }
+  // .mat-dialog-content{
+  //   margin: 0;
+  //   padding: 0;
+  //   max-height: max-content;
+  //   // max-height: 94vh;
+  // }
 }
