--- a/src/app/parts/search-dialog-form-plan/search-dialog-form-plan.component.scss
+++ b/src/app/parts/search-dialog-form-plan/search-dialog-form-plan.component.scss
@@ -97,7 +97,7 @@
     }
   }
 
-  .mat-dialog-content {
+  mat-dialog-content {
     // max-height: 70vh;
     // margin-bottom: 8em;
     min-height: 70vh;
