upd0623 11:00 add myplan

--- a/src/app/layout/root/root.component.html
+++ b/src/app/layout/root/root.component.html
@@ -28,7 +28,7 @@
     <button mat-button class="close-my-plan" (click)="onhandleCartNav(true)">
       <img src="{{backbtn_src}}" alt="close my plan"/>
     </button>
-    <!-- <app-myplan></app-myplan> -->
+    <app-myplan></app-myplan>
   </mat-sidenav>
 
   <mat-sidenav-content>
