--- a/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.html
+++ b/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.html
@@ -1,1 +1,9 @@
-<p>confirm-message-dialog works!</p>
+<h2 mat-dialog-title>{{ data.title | translate }}</h2>
+<mat-dialog-content>
+  <span class="text">{{ data.text | translate }}</span>
+  <span class="subtext" *ngIf="data.subText">{{ data.subText | translate }}</span>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-raised-button mat-dialog-close="cancel" class="cancel">{{ data.leftButton | translate }}</button>
+  <button mat-raised-button mat-dialog-close="ok" class="ok">{{ data.rightButton | translate }}</button>
+</mat-dialog-actions>
