--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -81,7 +81,7 @@ h4.header{
   // display: inline-flex !important;
 
   > img {
-    height: 62.6vw;
+    // height: 62.6vw;
 
     object-fit: cover;
     @include copy-protect;
