--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -316,7 +316,7 @@ h4.header{
     .spotinfo{
       .card-box{
         .spot-image{
-          //height: 307px!important;
+          height: 307px!important;
         }
       }
     }
@@ -485,7 +485,7 @@ h4.header{
       
       .spot-image{
         position: relative;
-        height: 235px;
+        height: 210px;
         overflow: hidden;
         margin-top: 0.5em;
 
