--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -81,7 +81,7 @@ h4.header{
   // display: inline-flex !important;
 
   > img {
-    // height: 62.6vw;
+    height: 62.6vw;
 
     object-fit: cover;
     @include copy-protect;
@@ -485,7 +485,8 @@ h4.header{
       
       .spot-image{
         position: relative;
-        height: 210px;
+        //height: 210px;
+        height: 62.6vw;
         overflow: hidden;
         margin-top: 0.5em;
 
