--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -79,7 +79,8 @@ h4.header{
 
 .thumbmain {
   // display: inline-flex !important;
-
+  text-align: center;
+  background: $color-gry06;
   > img {
     height: 62.6vw;
 
