--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -82,7 +82,8 @@ h4.header{
   text-align: center;
   background: $color-gry06;
   > img {
-    height: 62.6vw;
+    //height: 62.6vw;
+    height: 75vw;
 
     object-fit: cover;
     @include copy-protect;
