upd logo size contain

--- a/src/app/pages/top/top.component.scss
+++ b/src/app/pages/top/top.component.scss
@@ -56,6 +56,7 @@
     }
     .logo{
       background-image: url("../../../assets/img/remoju-logo-b.svg");
+      background-size: 227px 58px;
       height: 58px;
       width: 227px;
     }
