upd top logo image direct bind

--- a/src/app/pages/top/top.component.html
+++ b/src/app/pages/top/top.component.html
@@ -20,7 +20,8 @@
     <div id="content">
       <div class="frame">
         <h1>旅プランを作ろう！</h1>
-        <div class="logo"></div>
+        <!-- <div class="logo"></div> -->
+        <img src="../../../assets/img/remoju-logo-b.svg" alt="log" width="227" height="58"/>
         <div class="catch">
           みんなのおすすめを参考に、<br>
           オリジナルの旅プランが作れます。
