upd nav panel logo image fit

--- a/src/app/parts/nav-menu/nav-menu.component.html
+++ b/src/app/parts/nav-menu/nav-menu.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar" role="navigation">
     <div class="navbar-header">
       <a class="navbar-brand lower" href="/">
-        <img src="../../../assets/img/remoju-logo-b.svg" alt="remoju-app" />
+        <img src="../../../assets/img/remoju-logo-b.svg" alt="remoju-app" width="106" height="27" />
       </a>
     </div>
     <div class="nav-wrap">
