--- a/src/app/modules/planspot/planspot.component.html
+++ b/src/app/modules/planspot/planspot.component.html
@@ -1,4 +1,6 @@
 <app-planspot-selector></app-planspot-selector>
 <app-planspot-list>
-  <app-planspot-list-item></app-planspot-list-item>
+  <app-planspot-list-item
+    *ngFor="let item of details$ | async"
+  ></app-planspot-list-item>
 </app-planspot-list>
