--- a/src/app/modules/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/modules/planspot/components/planspot-list/planspot-list.component.html
@@ -1,1 +1,8 @@
-<p>planspot-list works!</p>
+<div class='box'
+  infinite-scroll 
+  [infiniteScrollDistance]="5"
+  [infiniteScrollUpDistance]="1.5"
+  [infiniteScrollThrottle]="150"
+  (scrolled)="onScrollDown()">
+  <ng-content></ng-content>
+</div>
