--- a/src/app/modules/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/modules/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -1,1 +1,20 @@
-<p>planspot-list-item works!</p>
+<mat-card>
+  <mat-card-content>
+    <div class='card-box'>
+      <div class='card-header'>
+
+        <div class='info'>
+          <div class='lt'>
+            <span class="areaName" *ngIf="item.areaName">
+              {{ item.areaName | langFilter: lang }}
+            </span>
+            <span class="category" *ngIf="item.areaName2">
+              {{ item.areaName2 | langFilter: lang }}
+            </span>
+          </div>
+          
+        </div>
+      </div>
+    </div>
+  </mat-card-content>
+</mat-card>
