--- a/src/app/modules/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/modules/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -12,6 +12,9 @@
               {{ item.areaName2 | langFilter: lang }}
             </span>
           </div>
+          <div class='rt'>
+            
+          </div>
           
         </div>
       </div>
