--- a/src/app/modules/planspot/planspot.component.html
+++ b/src/app/modules/planspot/planspot.component.html
@@ -1,5 +1,6 @@
 <app-planspot-selector></app-planspot-selector>
 <app-planspot-list>
+  <button (click)="resetItems()">RESET</button>
   <app-planspot-list-item
     *ngFor="let item of details$ | async"
     [item]="item"
