--- a/src/app/pages/top/top.component.html
+++ b/src/app/pages/top/top.component.html
@@ -19,7 +19,7 @@
   <section>
     <div id="content">
       <div class="frame">
-        <h1>旅プランを作ろう！</h1>
+        <h1>旅プランを作ろう!</h1>
         <div class="logo"></div>
         <div class="catch">
           みんなのおすすめを参考に、<br>
@@ -28,9 +28,12 @@
       </div>
       
       <div class="inputWrapper">
+        <div class='title'>みんなのおすすめを探す</div>
         <input type="search" 
         placeholder="地域 カテゴリー キーワードなど" 
         class="keyword"/>
+
+        <img src='{{pictureUrl}}' alt="user" class="figure"/>
       </div>
       
     </div>
