--- a/src/app/pages/top/top.component.html
+++ b/src/app/pages/top/top.component.html
@@ -30,7 +30,7 @@
       <div class="inputWrapper">
         <div class='title'>みんなのおすすめを探す</div>
         <input type="search" 
-        placeholder="地域 カテゴリー キーワードなど" 
+        placeholder="「京都女子旅」「スカイツリー」..." 
         class="keyword"/>
 
         <img src='{{pictureUrl}}' alt="user" class="figure"/>
