REMOJU-356 プラン詳細　不具合

--- a/src/app/parts/message-dialog/message-dialog.component.html
+++ b/src/app/parts/message-dialog/message-dialog.component.html
@@ -1,1 +1,8 @@
-<p>message-dialog works!</p>
+<h2 mat-dialog-title>Remoju</h2>
+<mat-dialog-content>
+  <span>{{ data | translate }}</span>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-raised-button mat-dialog-close="ok">{{ "Close" | translate }}</button>
+</mat-dialog-actions>
+
