--- a/src/app/pages/planspot/planspot.component.html
+++ b/src/app/pages/planspot/planspot.component.html
@@ -1,8 +1,8 @@
 <app-planspot-selector></app-planspot-selector>
 <app-planspot-list>
-  <button (click)="resetItems()">RESET</button>
-  <!-- <app-planspot-list-item
-    *ngFor="let item of details$ | async"
+  <app-planspot-list-item
+    *ngFor="let item of details$"
     [item]="item"
-  ></app-planspot-list-item> -->
+  >
+  </app-planspot-list-item>
 </app-planspot-list>
