--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -974,45 +974,51 @@
     ::ng-deep .mat-card{
       margin-top: 24px;
       padding: 0;
-  
-      ::ng-deep .owl-prev,
-      ::ng-deep .owl-next {
-        position: absolute;
-        top: 60%;
-        display: block !important;
-        width: 14px;
-        height: 100px;
-        background-color: transparent;
-        border: 0 solid black;
-        transform: translateY(-50%);
-        z-index: 5;
-      }
-    
-      ::ng-deep .owl-prev {
-        left: -14px;
-      }
-    
-      ::ng-deep .owl-next {
-        right: 0;
-      }
-    
-      ::ng-deep .owl-prev i,
-      ::ng-deep .owl-next i {
-        color: #ccc;
-        transform: scale(1);
-      }
-    
-      ::ng-deep .owl-dots {
-        position: absolute;
-        top: 12px;
-        right: 6px;
-    
-        .owl-dot span {
-          width: 6px;
-          height: 6px;
-          margin: 3px 4px;
+
+      ::ng-deep .owl-carousel{
+        z-index: 3;
+        ::ng-deep .owl-prev,
+        ::ng-deep .owl-next {
+          position: absolute;
+          top: 60%;
+          display: block !important;
+          width: 14px;
+          height: 100px;
+          background-color: transparent;
+          border: 0 solid black;
+          transform: translateY(-50%);
+          z-index: 5;
+        }
+      
+        ::ng-deep .owl-prev {
+          left: -14px;
+        }
+      
+        ::ng-deep .owl-next {
+          right: 0;
+        }
+      
+        ::ng-deep .owl-prev i,
+        ::ng-deep .owl-next i {
+          color: #ccc;
+          transform: scale(1);
+        }
+      
+        ::ng-deep .owl-dots {
+          position: absolute;
+          top: 12px;
+          right: 6px;
+      
+          .owl-dot span {
+            width: 6px;
+            height: 6px;
+            margin: 3px 4px;
+          }
         }
       }
+
+
+      
     
       .buttons {
         position: absolute;
