--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -784,6 +784,20 @@
     }
   }
 
+  .planhead{
+    .planex{
+      .mat-list-item{
+        height: initial;
+        p{
+          font-size: 15px;
+          line-height: 1.8;
+          color: #4d4d4d;
+          margin: initial;
+        }
+      }
+    }
+  }
+
   .startSpot,.endSpot{
     height: 60px;
     display: flex;
