--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
@@ -1,10 +1,4 @@
-<div class='box' style="min-height: 1640px;"
-  infinite-scroll 
-  [infiniteScrollDistance]="5"
-  [infiniteScrollUpDistance]="1.5"
-  [infiniteScrollThrottle]="150"
-  (scrolled)="onScrollDown()">
+<div>
   <ng-content>
-    
   </ng-content>
 </div>
