--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
@@ -1,4 +1,9 @@
-<div>
+<div class="box"
+infinite-scroll
+[infiniteScrollDistance]="5"
+[infiniteScrollUpDistance]="1.5"
+[infiniteScrollThrottle]="150"
+(scrolled)="scrolledEmit()">
   <ng-content>
   </ng-content>
 </div>
