--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -2,7 +2,26 @@
   <mat-card-content>
     <div class='card-box'>
       <div class='card-header'>
+        <div class='picture'>
+          <owl-carousel-o *ngIf="item.pictures && item.pictures.length > 1; else single" [options]="mainOptions">
+            <ng-container *ngFor="let pic of item.pictures; index as i">
+              <ng-template carouselSlide id="row.planId">
+                <a class="link" (click)="linktoPlan(item.id)">
+                  <div class="thumbmain">
+                    <img
+                      [src]="pic"
+                      [alt]="item.id"
+                      [title]="item.id"
+                    />
+                  </div>
+                </a>
+              </ng-template>
+            </ng-container>
+          </owl-carousel-o>
+          <ng-template #single>
 
+          </ng-template>
+        </div>
         <div class='info'>
           <div class='lt'>
             <!-- <span class="areaName" *ngIf="item.areaName">
